# ai-customer-service

./: .env.deploy  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  runserver.sh
.git-hook/: install.sh  pre-commit
.github/workflows/: ci.yml
RAG/: Dockerfile  exceptions.py  main.py
RAG/api/: dependencies.py  infra_handlers.py  router.py
RAG/config/: settings.py
RAG/db/: postgres.py  qdrant.py  redis.py
RAG/generation/: llm_client.py  prompts.py  response_parser.py
RAG/ingestion/: chunker.py  embedder.py  pipeline.py  preprocessor.py
RAG/pipeline/: rag_pipeline.py  session_manager.py
RAG/retrieval/: context_builder.py  reranker.py  searcher.py
RAG/services/: chatwoot_agent_bot.py  direct_llm.py
UI/: .env.example  Dockerfile  nginx.conf  package.json  pnpm-lock.yaml
alembic/: env.py
alembic/versions/: 0001_create_documents_table.py
backend/: Dockerfile  main.py
backend/api/: dependencies.py  router.py
backend/config/: settings.py
backend/db/: postgres.py  qdrant.py  redis.py
backend/generation/: llm_client.py  prompts.py  response_parser.py
backend/ingestion/: chunker.py  embedder.py  loader.py  pipeline.py
backend/pipeline/: rag_pipeline.py  session_manager.py
backend/retrieval/: context_builder.py  reranker.py  searcher.py
data/canonical/: documents.jsonl
docs/: EVAL_END2END.md  EVAL_GENERATION.md  EVAL_RETRIEVAL.md  blueprint-rag-pipeline.md  indexing.md
evals/: utils.py
frontend/: Dockerfile
git-hook/: pre-commit
scripts/: index.sh  ingest.sh
tests/: conftest.py
(+65 files in other folders)
